    via junping_du)

    YARN-3377. Fixed test failure in TestTimelineServiceClientIntegration.
    (Sangjin Lee via zjshen)

    YARN-3034. Implement RM starting its timeline collector. (Naganarasimha G R
    via junping_du)

    YARN-3040. Make putEntities operation be aware of the app's context. (Zhijie Shen 
    via junping_du)

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

Trunk - Unreleased

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    YARN-2438. yarn-env.sh cleanup (aw)

    YARN-2472. yarn-daemons.sh should jsut call yarn directly (Masatake Iwasaki
    via aw)

    YARN-2437. start-yarn.sh/stop-yarn should give info (Varun Saxena via aw)

    YARN-2796. deprecate sbin/yarn-daemon.sh (aw)

    YARN-2980. Move health check script related functionality to hadoop-common
    (Varun Saxena via aw)

    YARN-3168. Convert site documentation from apt to markdown (Gururaj Shetty
    via aw)

    YARN-3199. Fair Scheduler documentation improvements (Rohit Agarwal via
    aw)

    YARN-2280. Resource manager web service fields are not accessible
    (Krisztian Horvath via aw)

  OPTIMIZATIONS

  BUG FIXES

    YARN-524 TestYarnVersionInfo failing if generated properties doesn't
    include an SVN URL. (stevel)

    YARN-1471. The SLS simulator is not running the preemption policy 
    for CapacityScheduler (Carlo Curino via cdouglas)

    YARN-2436. [post-HADOOP-9902] yarn application help doesn't work (aw)

    YARN-2525. yarn logs command gives error on trunk (Akira AJISAKA via aw)

    YARN-3002. YARN documentation needs updating post-shell rewrite (aw)

    YARN-2428. LCE default banned user list should have yarn (Varun
    Saxena via aw)

Release 2.8.0 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

    YARN-3345. Add non-exclusive node label API. (Wangda Tan via jianhe)

  IMPROVEMENTS

    YARN-1880. Cleanup TestApplicationClientProtocolOnHA
    (ozawa via harsh)

    YARN-3243. CapacityScheduler should pass headroom from parent to children